Fixed list overflow style issue.

--- a/css/space-odyssey.css
+++ b/css/space-odyssey.css
@@ -107,7 +107,7 @@ body .primary-button {
         height: 349px;
     }
         .slogan-words ul{
-            padding: 0px 0px 0px 17px;
+            padding: 0px 0px 0px 16px;
         }
         .slogan-words h1{
             color: #fff;
